# mcp-code-reviewer

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
mcp_code_reviewer/: __main__.py  mcp_client.py  mcp_server.py
tests/: test_server.py
